Complete the first draft

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 
         <div class="profile-section">
             <img src="./static/imgs/—Pngtree—cartoon color simple male avatar_5230557.png" alt="profile picture">
-            <span>Hi there,</span>
-            <span>Pedram Yousefi</span>
+            <div class="welcome">
+                <p>Hi there,</p>
+                <span>Pedram Yousefi (@PedramH)</span>
+            </div>
         </div>
 
         <div class="commands">
@@ -85,8 +87,124 @@
             </div>
         </div>
     </div>
-    <div class="content">
-
+    <div class="main">
+        <div class="content">
+            <div class="title">Your Projects</div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-title">
+                            Super Cool Projects
+                        </div>
+                        <p>
+                        Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur
+                    </div>
+                    </p>
+                    <div class="card-actions">
+                        <iconify-icon icon="mdi:star-plus-outline"></iconify-icon>
+                        <iconify-icon icon="mdi:eye-plus-outline"></iconify-icon>
+                        <iconify-icon icon="mdi:source-fork"></iconify-icon>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-title">
+                            Super Cool Projects
+                        </div>
+                        <p>
+                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur
+                    </div>
+                    </p>
+                    <div class="card-actions">
+                        <iconify-icon icon="mdi:star-plus-outline"></iconify-icon>
+                        <iconify-icon icon="mdi:eye-plus-outline"></iconify-icon>
+                        <iconify-icon icon="mdi:source-fork"></iconify-icon>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-title">
+                            Super Cool Projects
+                        </div>
+                        <p>
+                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur
+                    </div>
+                    </p>
+                    <div class="card-actions">
+                        <iconify-icon icon="mdi:star-plus-outline"></iconify-icon>
+                        <iconify-icon icon="mdi:eye-plus-outline"></iconify-icon>
+                        <iconify-icon icon="mdi:source-fork"></iconify-icon>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-title">
+                            Super Cool Projects
+                        </div>
+                        <p>
+                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur
+                    </div>
+                    </p>
+                    <div class="card-actions">
+                        <iconify-icon icon="mdi:star-plus-outline"></iconify-icon>
+                        <iconify-icon icon="mdi:eye-plus-outline"></iconify-icon>
+                        <iconify-icon icon="mdi:source-fork"></iconify-icon>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-title">
+                            Super Cool Projects
+                        </div>
+                        <p>
+                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur
+                    </div>
+                    </p>
+                    <div class="card-actions">
+                        <iconify-icon icon="mdi:star-plus-outline"></iconify-icon>
+                        <iconify-icon icon="mdi:eye-plus-outline"></iconify-icon>
+                        <iconify-icon icon="mdi:source-fork"></iconify-icon>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-title">
+                            Super Cool Projects
+                        </div>
+                        <p>
+                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur
+                    </div>
+                    </p>
+                    <div class="card-actions">
+                        <iconify-icon icon="mdi:star-plus-outline"></iconify-icon>
+                        <iconify-icon icon="mdi:eye-plus-outline"></iconify-icon>
+                        <iconify-icon icon="mdi:source-fork"></iconify-icon>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="announcements">
+            <div class="title">Announcements</div>
+            <div class="card">
+                <div class="card-title">
+                    Super Cool Projects
+                </div>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+                </p>
+            </div>
+        </div>
+        <div class="trending">
+            <div class="title">Trending</div>
+            <div class="card">
+                <div class="card-title">
+                    Super Cool Projects
+                </div>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
